ping-pong-chart/templates/VirtualService.yaml
# Copyright 2019 Bnaya Eshet © 
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

######################################################################################
# virtual-service:
# define the routing.
#
# https://istio.io/docs/reference/config/istio.networking.v1alpha3/#VirtualService
######################################################################################

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ping-pong-virtual-service
spec:
  hosts:
  - "*" # target-service
  gateways:
  - ping-pong-gateway
  http:
######################################################################################
# echo
######################################################################################
  - match:
    - uri:
        prefix: /api/v1/echo
    rewrite:
      uri: /
    route:
    - destination: # Destination indicates the network addressable service to which the request/connection will be sent after processing a routing rule.
        host: echo-svc
        port:
          number: 80
    fault: # https://istio.io/docs/tasks/traffic-management/fault-injection/
      delay:
        percent: 50
        fixedDelay: 3s
      abort:
        percent: 20
        httpStatus: 404
    retries:
      attempts: 2
      perTryTimeout: 1s
  - match:
    - uri:
        exact: /echo/health
    - uri:
        exact: /echo/ready
    - uri:
        exact: /echo
    route:
    - destination:
        host: echo-svc
        port:
          number: 80
    timeout: 10s
######################################################################################
# ping
######################################################################################
  - match:
    - uri:
        exact: /api/v1/ping/health
    rewrite:
      uri: /health
    route:
    - destination:
        host: ping-svc
        port:
          number: 80
  - match:
    - uri:
        exact: /api/v1/ping/ready
    rewrite:
      uri: /ready
    route:
    - destination:
        host: ping-svc
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/v1/ping
    rewrite:
      uri: /
    route:
    - destination:
        host: ping-svc
        port:
          number: 80
    timeout: 2s
######################################################################################
# pong
######################################################################################
  - match:
    - uri:
        exact: /api/v1/pong/health
    rewrite:
      uri: /health
    route:
    - destination:
        host: pong-svc
        port:
          number: 80
  - match:
    - uri:
        exact: /api/v1/pong/ready
    rewrite:
      uri: /ready
    route:
    - destination:
        host: pong-svc
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/v1/pong
    rewrite:
      uri: /
    route:
    - destination:
        host: pong-svc
        port:
          number: 80
